clusters/dagda/infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.aiectomy.xyz"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-aiectomy-xyz-tls
      allowedRoutes:
        namespaces:
          from: All
